--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -30,14 +30,16 @@
     </div>
   </p-card>
 </div>
+
 <div class="p-fluid p-formgrid p-grid">
   <div class="p-field p-col-12 p-md-4">
     <label for="timestampType">{{ 'general.table.header.timestamp.label' | translate }}: </label>
     <p-dropdown id="timestampType" styleClass="dropdown" [(ngModel)]="timestampSelected"
                 [options]="timestampTypes"></p-dropdown>
   </div>
-  <div class="p-field p-col-12 p-md-2">
-  </div>
+
+  <div class="p-field p-col-12 p-md-2"></div>
+
   <!--
   <div class="p-field p-col-12 p-md-5">
     <label for="logoftimestamp">{{ 'general.table.header.logOfTimestamp.label' | translate }}: </label>
