--- a/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -1,25 +1,6 @@
 <form [formGroup]="transportCallFormGroup">
   <div class="p-fluid p-formgrid p-grid">
 
-
-    <!-- irrelevant, we send entire Vessel object along anyway -->
-    <!--    <div class="p-field p-col-12 p-md-4">-->
-    <!--      <h4>{{ 'general.vessel.label' | translate }}</h4>-->
-    <!--      <label for="vesselIMO">{{ 'general.vessel.number' | translate }}:</label>-->
-    <!--      <input id="vesselIMO" formControlName="imo" pInputText style="width: 100%" type="text" />-->
-    <!--      <span *ngIf="transportCallFormGroup.get('imo').hasError('required') && transportCallFormGroup.get('imo').touched"-->
-    <!--        class="p-invalid">-->
-    <!--        {{ 'general.transportCall.validation.vessel.empty' | translate }}-->
-    <!--      </span>-->
-    <!--      <span *ngIf="transportCallFormGroup.get('imo').hasError('pattern')" class="p-invalid">-->
-    <!--        {{ 'general.transportCall.validation.vessel.length' | translate }}-->
-    <!--      </span>-->
-    <!--      <span *ngIf="transportCallFormGroup.get('imo').hasError('maxlength')" class="p-invalid">-->
-    <!--        {{ 'general.transportCall.validation.vessel.lenght' | translate }}-->
-    <!--      </span>-->
-    <!--    </div>-->
-
-
     <div class="p-field p-col-12 p-md-4">
       <label for="serviceCode">{{ 'general.transportCall.table.carrierServiceCode.label' | translate }}:</label>
       <input id="serviceCode" formControlName="serviceCode" pInputText style="width: 100%" type="text"/>
@@ -38,12 +19,11 @@
       <input id="voyageNumber" formControlName="voyageNumber" pInputText style="width: 100%" type="text"/>
       <span
         *ngIf="transportCallFormGroup.get('voyageNumber').hasError('required') && transportCallFormGroup.get('voyageNumber').touched"
-        class="p-invalid">
-            {{ 'general.transportCall.validation.carrierVoyageNumber.empty' | translate }}
-          </span>
+        class="p-invalid">{{ 'general.transportCall.validation.carrierVoyageNumber.empty' | translate }}
+      </span>
       <span *ngIf="transportCallFormGroup.get('voyageNumber').hasError('maxlength')" class="p-invalid">
-            {{ 'general.transportCall.validation.carrierVoyageNumber.length' | translate }}
-          </span>
+        {{ 'general.transportCall.validation.carrierVoyageNumber.length' | translate }}
+      </span>
     </div>
 
 
@@ -91,27 +71,8 @@
         </div>
         <div class="p-field p-col-12 p-md-4"></div>
 
-        <!-- hardcoded to 1 -->
-        <!--        <div class="p-field p-col-12 p-md-4">-->
-        <!--          <label for="sequenceNumber">{{ 'general.transportCall.table.transportCallSequenceNumber.label' | translate }}-->
-        <!--            :</label>-->
-        <!--          <input formControlName="callSequenceNumber" id="sequenceNumber" pInputText style="width: 100%" type="text" />-->
-        <!--          <span *ngIf="transportCallFormGroup.get('callSequenceNumber').hasError('required')" class="p-invalid">-->
-        <!--            {{ 'general.transportCall.validation.sequenceNumber.empty' | translate }}-->
-        <!--          </span>-->
-        <!--          <span *ngIf="transportCallFormGroup.get('callSequenceNumber').hasError('max')" class="p-invalid">-->
-        <!--            {{ 'general.transportCall.validation.sequenceNumber.length' | translate }}-->
-        <!--          </span>-->
-        <!--          <span *ngIf="transportCallFormGroup.get('callSequenceNumber').hasError('min')" class="p-invalid">-->
-        <!--            {{ 'general.transportCall.validation.sequenceNumber.length' | translate }}-->
-        <!--          </span>-->
-        <!--        </div>-->
-        <!--        <div class="p-field p-col-12 p-md-8">-->
-        <!--        </div>-->
-
       </div>
     </div>
-
 
     <!-- Vessels -->
     <div class="p-field p-col-12 p-md-4">
@@ -133,30 +94,123 @@
       </span>
     </div>
 
-    <!-- FacilityCodeListProvider -->
-    <!--    <div class="p-field p-col-12 p-md-12">-->
-    <!--      <h4>{{ 'general.port.label' | translate }}</h4>-->
-    <!--        <div class="p-field p-col-12 p-md-4">-->
-    <!--          <label for="portOfCall">{{ 'general.port.ofCall' | translate }}:</label>-->
-    <!--          <p-dropdown appendTo="body" formControlName="facilityCodeListProvider" id="facilityCodeListProviders" class="facilityCodeListProviders__dropDown"-->
-    <!--            [options]="facilityCodeListProviderOptions" [filter]="true" (onChange)="portSelected()" filterBy="label,value.name">-->
-    <!--            <ng-template let-facilityCodeListProvider pTemplate="item">-->
-    <!--              <div *ngIf="!facilityCodeListProvider.value">-->
-    <!--                <div>Select facilityCodeListProvider</div>-->
-    <!--              </div>-->
-    <!--              <div *ngIf="facilityCodeListProvider.value">-->
-    <!--                <div>{{facilityCodeListProvider.value.toString()}}</div>-->
-    <!--                <div class="portListName">{{facilityCodeListProvider.value}}</div>-->
-    <!--              </div>-->
-    <!--            </ng-template>-->
-    <!--          </p-dropdown>-->
-    <!--          <span *ngIf="transportCallFormGroup.get('vessel').hasError('required')" class="p-invalid">-->
-    <!--            {{ 'general.transportCall.validation.port.empty' | translate }}-->
-    <!--          </span>-->
-    <!--        </div>-->
-    <!--    </div>-->
+    <!-- FacilityTypeCode -->
+    <div class="p-field p-col-12 p-md-4">
+      <label for="facilityTypeCodes">{{ 'general.facilityTypeCode.label' | translate }}:</label>
+      <p-dropdown appendTo="body" formControlName="facilityTypeCode" id="facilityTypeCodes"
+                  class="facilityTypeCodes__dropDown"
+                  [options]="facilityTypeCodeOptions" [filter]="true" filterBy="label,value.name">
+        <ng-template let-facilityTypeCode pTemplate="item">
+          <div *ngIf="!facilityTypeCode.value">
+            <div>Select facility type code</div>
+          </div>
+          <div *ngIf="facilityTypeCode.value">
+            <div>{{facilityTypeCode.value}}</div>
+            <div class="portListName">{{facilityTypeCode.value.name}}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+      <span *ngIf="transportCallFormGroup.get('vessel').hasError('required')" class="p-invalid">
+        {{ 'general.transportCall.validation.facilityTypeCode.noFacilityTypeCodeSelected' | translate }}
+      </span>
+    </div>
+
+    <!-- eventClassifierCode -->
+<!--    <div class="p-field p-col-12 p-md-4">-->
+<!--      <label for="eventClassifierCodes">{{ 'general.facilityTypeCode.label' | translate }}:</label>-->
+<!--      <p-dropdown appendTo="body" formControlName="facilityTypeCode" id="eventClassifierCodes"-->
+<!--                  class="eventClassifierCodes__dropDown"-->
+<!--                  [options]="eventClassifierCodeOptions" [filter]="true" filterBy="label,value.name">-->
+<!--        <ng-template let-eventClassifierCode pTemplate="item">-->
+<!--          <div *ngIf="!eventClassifierCode.value">-->
+<!--            <div>Select facility type code</div>-->
+<!--          </div>-->
+<!--          <div *ngIf="eventClassifierCode.value">-->
+<!--            <div>{{eventClassifierCode.value}}</div>-->
+<!--            <div class="portListName">{{eventClassifierCode.value.name}}</div>-->
+<!--          </div>-->
+<!--        </ng-template>-->
+<!--      </p-dropdown>-->
+<!--      <span *ngIf="transportCallFormGroup.get('vessel').hasError('required')" class="p-invalid">-->
+<!--        {{ 'general.transportCall.validation.facilityTypeCode.noFacilityTypeCodeSelected' | translate }}-->
+<!--      </span>-->
+<!--    </div>-->
 
   </div>
+
+  <!-- TIMESTAMP -->
+  <div class="p-fluid p-formgrid p-grid">
+    <div class="p-field p-col-12 p-md-4">
+      <label for="timestampType">{{ 'general.table.header.timestamp.label' | translate }}: </label>
+      <p-dropdown id="timestampType" formControlName="timestampType" styleClass="dropdown" [options]="timestampTypes">
+      </p-dropdown>
+    </div>
+
+    <div class="p-field p-col-12 p-md-2"></div>
+
+    <div class="p-field p-col-12 p-md-5">
+      <div class="p-fluid p-formgrid p-grid">
+        <div class="p-field p-col-12 p-md-6">
+          <p-calendar id="eventtimestamp" appendTo="body" formControlName="eventTimestampDate" hourFormat="24"
+                      [monthNavigator]="true" [showButtonBar]="false"
+                      [showIcon]="true" [showWeek]="true"
+                      [yearNavigator]="true" yearRange="2010:2030"
+                      styleClass="date-time-date-field" placeholder="{{ 'general.timestamp.date.event' | translate }}"
+                      [panelStyleClass]="'datetime-panel'">
+          </p-calendar>
+        </div>
+        <div class="p-field p-col-12 p-md-6">
+          <p-inputMask formControlName="eventTimestampTime" mask="99:99"
+                       placeholder="{{ 'general.timestamp.time' | translate }}"
+                       styleClass="datetime-time-time-field">
+          </p-inputMask>
+          <button type="button" pButton pRipple icon="pi pi-clock" styleClass="p-button-success"
+                  (click)="setEventTimestampToNow()">
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="p-field p-col-12 p-md-5">
+      <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
+      <p-dropdown id="delayCode" [options]="delayCodeOptions" formControlName="delayCode" [filter]="true"
+                  filterBy="label,value.name" [group]="false">
+        <ng-template let-delayCode pTemplate="selectedItem">
+          <div *ngIf="delayCode.value" class="delayCodeSelectedWrapper">
+            <div class="delayCodeSelected__smdgCode">{{delayCode.value.smdgCode}}</div>
+            <div class="delayCodeSelected__delayType">&nbsp;&middot;&nbsp;{{delayCode.value.delayType}}
+            </div>
+            <div class="delayCodeSelected__delayDetails">&nbsp;&middot;&nbsp;{{delayCode.value.name}}</div>
+            <div class="delayCodeSelected__delayDetails">&nbsp;&middot;&nbsp;{{delayCode.value.description}}</div>
+          </div>
+          <div *ngIf="!delayCode.value">
+            <div>{{delayCode.label}}</div>
+          </div>
+        </ng-template>
+        <ng-template let-delayCode pTemplate="item">
+          <div class="delayCodeDetails" *ngIf="delayCode.value">
+            <div class="delayCodeDetails__smdgCode">{{delayCode.value.smdgCode}}</div>
+            <div class="delayCodeDetails__delayType">{{delayCode.value.delayType}}</div>
+            <div class="delayCodeDetails__delayName">{{delayCode.value.name}}</div>
+            <div class="delayCodeDetails__delaydescription">{{delayCode.value.description}}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+    </div>
+    <div class="p-field p-col-12 p-md-7">
+    </div>
+
+
+    <div class="p-field p-col-12 p-md-6">
+      <span class="p-float-label">
+        <textarea class="commentBox" id="commentbox" pInputTextarea formControlName="defaultTimestampRemark"></textarea>
+        <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
+      </span>
+    </div>
+    <div class="p-field p-col-12 p-md-6">
+    </div>
+  </div>
+
   <div class="p-grid">
     <div class="p-col-8">
     </div>
@@ -174,4 +228,5 @@
 
     </div>
   </div>
+
 </form>
